--- a/Texto base.html
+++ b/Texto base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE htlm>
 <htlm>
-   
-<hi>Sobre a Barbearia Alura</hi>
+    <meta charset="UTF-8"
+    <Litle>Barbearia Alura</litle>   
+    
+   <hi>Sobre a Barbearia Alura</hi>
 
     <p>Localizada no coracao da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que ha de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura ja e destaque na cidade e conquista novos clientes a cada dia.</p>
 
