--- a/Texto base.html
+++ b/Texto base.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8"
         <Litle>Barbearia Alura</litle>   
+        <link.rel="stylesheet".hret="style.css">
+   
+        <style> 
+        </style> 
     </head>
     
     <body>
