--- a/Texto base.html
+++ b/Texto base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"
         <Litle>Barbearia Alura</litle>   
-        <link.rel="stylesheet".hret="style.css">
+        <link.rel="stylesheet".href="style.css">
    
         <style> 
        
